CORE-124 json api: get signature request
