# internal/gen/api/oas_response_encoders_gen.go
@@ -27,6 +27,20 @@ func encodeGetAggregationProofGetResponse(response *AggregationProof, w http.Res
 	return nil
 }
 
+func encodeGetAggregationStatusGetResponse(response *AggregationStatus, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetCurrentEpochGetResponse(response *GetCurrentEpochGetOK, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
